fix: document style overflowing into everything

--- a/src/Document.css
+++ b/src/Document.css
@@ -1,65 +1,62 @@
 .Document-layout {
-	container-type: inline-size;
-	display: grid;
-	place-items: center;
+  container-type: inline-size;
+  display: grid;
+  place-items: center;
 }
 
 .Document-container {
-	counter-reset: section;
-	max-width: 80ch;
-	padding: 1rem 2rem;
+  counter-reset: section;
+  max-width: 80ch;
+  padding: 1rem 2rem;
 }
 
-h2 {
-	margin-block-start: 4rem;
+.Document-container h2 {
+  margin-block-start: 4rem;
 }
 
-h3 {
-	margin-block-start: 3rem;
+.Document-container h3 {
+  margin-block-start: 3rem;
 }
 
-h2::before {
-	content: counter(section) ". ";
-	counter-increment: section;
+.Document-container h2::before {
+  content: counter(section) ". ";
+  counter-increment: section;
 }
 
-table {
-	display: grid;
+.Document-container table {
+  display: grid;
 }
 
-thead,
-tbody,
-tr {
-	display: contents;
+.Document-container :where(thead, tbody, tr) {
+  display: contents;
 }
 
 .PrivacyPolicy-cookieTable {
-	--border-width: 1px;
-	--border-color: var(--cl-foreground);
+  --border-width: 1px;
+  --border-color: var(--cl-foreground);
 
-	grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .CookieTable-header {
-	border-block-end: var(--border-width) solid var(--border-color);
+  border-block-end: var(--border-width) solid var(--border-color);
 }
 
 .CookieTable-header,
 .CookieTable-name,
 .CookieTable-purpose {
-	padding: 0.5rem;
-	background-color: var(--cl-background);
+  padding: 0.5rem;
+  background-color: var(--cl-background);
 }
 
 .CookieTable-name {
-	text-align: center;
+  text-align: center;
 }
 
 .Document-contactInfo {
-	margin-block-start: 2rem;
+  margin-block-start: 2rem;
 }
 
-p,
-li {
-	line-height: 1.6;
+.Document-container :where(p, li) {
+  line-height: 1.6;
 }
